change css element image dogechain for responsive layout

--- a/components/Intro/Content/Content.module.scss
+++ b/components/Intro/Content/Content.module.scss
@@ -103,7 +103,8 @@
   }
 
   .dogechain {
-    width: 422px;
+    max-width: 422px;
+    width: 100%;
     height: auto;
     margin: 35px auto 0;
 
