--- a/components/SocialLinks/SocialLinks.module.scss
+++ b/components/SocialLinks/SocialLinks.module.scss
@@ -16,6 +16,11 @@
 
   .item {
     font-size: 22px;
+    transition: text-shadow .1s linear;
+
+    &:hover {
+      text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    }
 
     &:last-child {
       margin-left: 60px;
