--- a/components/Faq/Faq.module.scss
+++ b/components/Faq/Faq.module.scss
@@ -40,9 +40,9 @@
     margin-bottom: 0;
   }
 
-  &:nth-child(3) {
-    margin-bottom: 200px;
-  }
+  //&:nth-child(3) {
+  //  margin-bottom: 200px;
+  //}
 }
 
 .question {
