--- a/components/Options/Options.module.scss
+++ b/components/Options/Options.module.scss
@@ -164,6 +164,12 @@
 
     @media (min-width: $media-screen-notebook) {
       margin-top: 40px;
+
+      &.second {
+        width: 280px;
+        margin-left: 0;
+        margin-right: 0;
+      }
       //width: 65%;
     }
   }
