--- a/components/InterlineLayer/InterlineLayer.module.scss
+++ b/components/InterlineLayer/InterlineLayer.module.scss
@@ -29,13 +29,39 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
+
+  line-height: 0;
+  font-size: 0;
+
+  //&:hover {
+  //  & * {
+  //    animation-play-state: paused;
+  //  }
+  //}
 }
 
 .image {
-  background: url('/images/carousel.png') repeat-x 100% / contain;
+  background: url('/images/carousel-6.png') repeat-x 100% / contain;
   height: 286px;
-  min-width: 3472px;
-  animation: slide 40s linear infinite;
+
+  vertical-align: top;
+  display: block;
+  float: left;
+
+
+  //min-width: 3472px;
+  //min-width: 9444px;
+  //min-width: 9364px;
+  min-width: 10346px;
+  animation: slide 70s linear infinite;
+  //opacity: 0;
+
+ // 10 346
+  &.secondImage {
+    opacity: 1;
+    margin-left: -2px;
+    //min-width: 9364px;
+  }
 
   @media (max-width: $media-screen-notebook - 1) {
     display: none;
