--- a/components/Info/KeyFeatures/KeyFeatures.module.scss
+++ b/components/Info/KeyFeatures/KeyFeatures.module.scss
@@ -5,7 +5,13 @@
   height: 700px;
   display: flex;
   position: relative;
-  background: linear-gradient(#ffbc6d, #ffbc6d) 50% 50%/calc(100% - 18px) calc(100% - 18px) no-repeat,            linear-gradient(transparent 0%, #000000 0%, #ffbc6d 0%, rgba(0, 0, 0, 0.298) 51%, rgba(0,0,0,0.57) 97%);
+  //background: linear-gradient(#ffbc6d, #ffbc6d) 50% 50%/calc(100% - 18px) calc(100% - 18px) no-repeat,            linear-gradient(transparent 0%, #000000 0%, #ffbc6d 0%, rgba(0, 0, 0, 0.298) 51%, rgba(0,0,0,0.57) 97%);
+  background: linear-gradient(180deg, rgba(246, 189, 121, 1) 80%, rgba(255, 138, 0, 0) 120%) no-repeat, linear-gradient(#ffffff, #ffffff) 50% 50%/calc(100% - 18px) calc(100% - 18px) no-repeat,
+  linear-gradient(0deg, rgba(0, 0, 0, 0.57) 0%, transparent 100%);
+
+  //background: linear-gradient(#ffffff, #ffffff) 50% 50%/calc(100% - 18px) calc(100% - 18px) no-repeat,
+  //linear-gradient(0deg, rgba(0,0,0,0.57) 0%, transparent 100%);
+
 
   @media (min-width: $media-screen-notebook) {
     height: 550px;
