--- a/components/Info/MintDetails/MintDetails.module.scss
+++ b/components/Info/MintDetails/MintDetails.module.scss
@@ -8,14 +8,18 @@
   background: #FFBC6D;
   flex-flow: column nowrap;
   padding-top: 70px;
-  background: linear-gradient(#ffbc6d, #ffbc6d) 50% 50%/calc(100% - 18px) calc(100% - 18px) no-repeat, linear-gradient(transparent 0%, #000000 0%, #ffbc6d 0%, rgba(0, 0, 0, 0.298) 51%, rgba(0, 0, 0, 0.57) 97%);
+  //background: linear-gradient(#ffbc6d, #ffbc6d) 50% 50%/calc(100% - 18px) calc(100% - 18px) no-repeat, linear-gradient(transparent 0%, #000000 0%, #ffbc6d 0%, rgba(0, 0, 0, 0.298) 51%, rgba(0, 0, 0, 0.57) 97%);
+  background: linear-gradient(180deg, rgba(246, 189, 121, 1) 80%, rgba(255, 138, 0, 0) 120%) no-repeat, linear-gradient(#ffffff, #ffffff) 50% 50%/calc(100% - 18px) calc(100% - 18px) no-repeat,
+  linear-gradient(0deg, rgba(0, 0, 0, 0.57) 0%, transparent 100%);
 
   @media (min-width: $media-screen-notebook) {
     justify-content: center;
     height: 550px;
     padding-top: 20px;
     padding-left: 110px;
-    background: url("/images/background-doges.png") no-repeat top / cover;
+    //background: url("/images/background-doges.png") no-repeat top / cover;
+    background: linear-gradient(180deg, rgba(246, 189, 121, 1) 80%, rgba(255, 138, 0, 0) 120%) no-repeat, linear-gradient(#ffffff, #ffffff) 50% 50%/calc(100% - 18px) calc(100% - 18px) no-repeat,
+    linear-gradient(0deg, rgba(0, 0, 0, 0.57) 0%, transparent 100%);
   }
 }
 
@@ -28,6 +32,27 @@
   0 -1px 1px #fff;
   font-size: 40px;
   margin-bottom: 35px;
+  position: relative;
+
+  &.price {
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+
+    .convert {
+      //margin-top: 25px;
+      margin-left: 10px;
+      font-size: 20px;
+      text-shadow: 1px 0 1px #fff,
+      0 1px 1px #fff,
+      -1px 0 1px #fff,
+      0 -1px 1px #fff;
+
+      @media (min-width: $media-screen-notebook) {
+        font-size: 17px;
+      }
+    }
+  }
 
   @media (min-width: $media-screen-notebook) {
     font-size: 47px;
