--- a/components/Intro/Intro.module.scss
+++ b/components/Intro/Intro.module.scss
@@ -1,4 +1,50 @@
+@import "styles/variables";
+
 .intro {
   width: 100%;
   height: auto;
+  position: relative;
+}
+
+
+.backgroundText {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  overflow: hidden;
+  z-index: -1;
+
+  @media (min-width: $media-screen-notebook) {
+    display: flex;
+  }
+
+  .text {
+    position: absolute;
+    font-size: 32px;
+
+    &:nth-child(1) {
+      right: -35px;
+      top: 245px;
+    }
+
+    &:nth-child(2) {
+      left: -36px;
+      top: 360px;
+    }
+
+    &:nth-child(3) {
+      left: -18px;
+      top: 770px;
+    }
+
+    &:nth-child(4) {
+      right: -52px;
+      top: 790px;
+    }
+
+
+  }
 }
