--- a/components/Intro/Content/Content.module.scss
+++ b/components/Intro/Content/Content.module.scss
@@ -24,24 +24,12 @@
 
 
   .image {
-    width: 263px;
+    width: 265px;
     height: auto;
     margin-left: 90px;
     margin-top: 140px;
     border: 5px solid #000;
     position: relative;
-
-    img {
-      width: 100%;
-      height: 100%;
-    }
-
-    .time {
-      font-size: 32px;
-      position: absolute;
-      bottom: -40px;
-      right: 0;
-    }
 
     @media (min-width: $media-screen-notebook) {
       background:  linear-gradient(130deg, #ffb800 0%, rgba(0, 0, 0, 0.5) 63%, #ffb800 68%);
@@ -49,12 +37,23 @@
       padding: 10px;
       box-sizing: content-box;
       border: none;
+      //width: 400px;
       width: 400px;
-      height: 450px;
+      height: 400px;
+      //height: 450px;
+      //height: auto;
+    }
 
-      &:after {
+    img {
+      width: 100%;
+      height: auto;
+    }
 
-      }
+    .time {
+      font-size: 32px;
+      position: absolute;
+      bottom: -40px;
+      right: 0;
     }
   }
 
@@ -135,7 +134,7 @@
     margin: 120px auto 0;
 
     @media (min-width: $media-screen-notebook) {
-      margin: 75px 0 0;
+      margin: 45px 0;
     }
 
     .image {
@@ -156,6 +155,9 @@
     height: 57px;
     font-size: 32px;
     background-color: #A88C7D;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
     &:hover {
       background-color: #FF8282;
