--- a/components/Popup/PopupBuyNft/PopupBuyNft.module.scss
+++ b/components/Popup/PopupBuyNft/PopupBuyNft.module.scss
@@ -56,6 +56,12 @@
   display: flex;
   border: 4px solid #9C8060;
 
+  &.disabled {
+    cursor: default;
+    filter: grayscale(100%);
+    pointer-events: none;
+  }
+
   &:hover {
     background-color: #C3FF87;
   }
@@ -70,4 +76,10 @@
     line-height: 45px;
     margin: auto;
   }
+}
+
+.available {
+  font-size: 20px;
+  margin-top: 50px;
+  color: rgba(0, 0, 0, 0.5);
 }
