--- a/components/Info/Info.module.scss
+++ b/components/Info/Info.module.scss
@@ -1,11 +1,14 @@
 @import "/styles/variables";
 
 .info {
-  margin-top: 150px;
+  margin-top: 200px;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
 
+  @media (min-width: $media-screen-notebook) {
+    margin-top: 85px;
+  }
 }
 
 .tabs {
