--- a/components/Options/Options.module.scss
+++ b/components/Options/Options.module.scss
@@ -69,6 +69,10 @@
   text-align: center;
   margin-bottom: 80px;
 
+  @media (min-width: $media-screen-notebook) {
+    margin-bottom: 0;
+  }
+
   &:nth-child(1) {
     .button:hover {
       background-color: darken(#FAB48D, 5)!important;
