fix address create write method "claim nft"

--- a/components/Popup/PopupGetFreeNft/PopupGetFreeNft.module.scss
+++ b/components/Popup/PopupGetFreeNft/PopupGetFreeNft.module.scss
@@ -62,6 +62,7 @@
     display: flex;
     padding: 0;
     background-color: #B0D28E;
+    align-items: center;
 
     &:hover {
       background-color: #B0D28E;
