--- a/components/Popup/PopupLayout/PopupLayout.module.scss
+++ b/components/Popup/PopupLayout/PopupLayout.module.scss
@@ -1,3 +1,5 @@
+@import "styles/variables";
+
 .container {
   width: 100vw;
   height: 100vh;
@@ -6,9 +8,6 @@
   right: 0;
   background-color: rgba(0, 0, 0, 0.55);
   z-index: 100;
-
-  //padding: 9px;
-  //box-sizing: content-box;
 }
 
 .popup {
@@ -16,7 +15,12 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  background: linear-gradient(#F2C794, #F2C794) 50% 50%/calc(100% - 18px) calc(100% - 18px) no-repeat, linear-gradient(rgba(0, 0, 0, 0.30) 0%, rgba(72, 171, 224, 0) 50%, rgba(0, 0, 0, 0.30) 100%);
+  background: linear-gradient(#ffbc6d, #ffbc6d) 50% 50%/calc(100% - 18px) calc(100% - 18px) no-repeat, linear-gradient(rgba(0, 0, 0, 0.30) 0%, rgba(72, 171, 224, 0) 50%, rgba(0, 0, 0, 0.30) 100%);
+
+
+  @media (min-width: $media-screen-notebook) {
+    background: linear-gradient(#F2C794, #F2C794) 50% 50%/calc(100% - 18px) calc(100% - 18px) no-repeat, linear-gradient(rgba(0, 0, 0, 0.30) 0%, rgba(72, 171, 224, 0) 50%, rgba(0, 0, 0, 0.30) 100%);
+  }
 }
 
 .close {
