fix layout and delete all links dogechain

--- a/components/Info/MintDetails/MintDetails.module.scss
+++ b/components/Info/MintDetails/MintDetails.module.scss
@@ -37,6 +37,7 @@
   @media (min-width: $media-screen-notebook) {
     text-align: center;
     font-size: 40px;
+    margin-left: 0;
   }
 
   &.price {
