--- a/components/InterlineLayer/InterlineLayer.module.scss
+++ b/components/InterlineLayer/InterlineLayer.module.scss
@@ -2,7 +2,8 @@
 
 .wrapper {
   position: relative;
-  margin-top: 100px;
+  //margin-top: 100px;
+  margin-top: -70px;
   height: 470px;
   width: 100%;
   overflow: hidden;
