--- a/components/Intro/Header/Header.module.scss
+++ b/components/Intro/Header/Header.module.scss
@@ -23,7 +23,7 @@
   .image {
     width: 100px;
     height: 80px;
-    transform: scale(2.3);
+    //transform: scale(2.3);
     //display: none;
 
     @media (min-width: $media-screen-notebook) {
