--- a/components/Intro/Intro.module.scss
+++ b/components/Intro/Intro.module.scss
@@ -6,7 +6,9 @@
   position: relative;
 
   @media (min-width: $media-screen-notebook) {
-    padding-bottom: 100px;
+    //padding-bottom: 100px;
+    padding-bottom: 300px;
+    background: url('/images/background-gradient.png') no-repeat 100% 100% / cover;
   }
 }
 
