--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,6 +10,11 @@
 *:after {
   box-sizing: border-box;
   margin: 0;
+  cursor: none!important;
+
+  &:hover {
+    cursor: none!important;
+  }
 }
 
 body {
